Fixed gallery on mobile devices

--- a/_sass/_gallery.scss
+++ b/_sass/_gallery.scss
@@ -21,6 +21,7 @@
 
       img {
         max-height: 200px;
+        max-width: 100%;
       }
 
       .carousel-caption {
